# end-to-end-backend

./: .dockerignore  Dockerfile  Dockerfile.jenkins  Jenkinsfile  PROJECT_TODO.md  docker-compose.yaml  main.py  pyproject.toml
app/database/: database.py
app/handler/: user_handler.py
app/models/: user_schema.py
app/repository/: user_repository.py
app/router/: user_router.py
app/service/: user_service.py
tests/: conftest.py  test_user_handler.py  test_user_repository.py
